--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.3.1",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
@@ -17,5 +18,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5"
   },
-  "engines": {"node": "22.x"}
+  "engines": {
+    "node": "18.x"
+  }
 }
